tests/e2e/keywords/try_is_keyword.error
Error: syntax error in story at line 1, column 5

1|    try = 1
          ^

E0041: `=` is not allowed here
